--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         
     }
 
-    function reset(){
+    function resetScores(){
         userScore = 0;
         computerScore = 0;
     }
 
     function runGame(){
-        reset();
+        resetScores();
 
         const ROUNDS = 5;
 
