--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         const WIN_MESSAGE = `You win, ${userMove} beats ${computerMove}.`;
         const LOSE_MESSAGE = `You lose, ${computerMove} beats ${userMove}.`;
 
-        const playerMoves = userMove[0] + computerMove[0];
+        const playerMoves = userMove.charAt(0) + computerMove.charAt(0);
         
         if(userMove == computerMove){
             console.log(TIE_MESSAGE);
