--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             ++userScore;
         } else {
             console.log(LOSE_MESSAGE);
-            ++userScore;
+            ++computerScore;
         }
     }
 
